--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -146,7 +146,7 @@
       font-size: 18px;
       line-height: 1.2;
       text-transform: uppercase;
-      letter-spacing: 0.03em;
+      letter-spacing: $small-caps-letter-spacing;
       font-weight: $semi-bold-weight;
     }
   }
