--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -1,5 +1,7 @@
-<% provide :page_title, application_name %>
-<% provide :container_class, "container-fluid homepage-content-wrapper" %>
+<% content_for :page_title, application_name %>
+<% content_for :container_class, "container-fluid homepage-content-wrapper" %>
+<% provide :foo, "bar" %>
+<% provide :suppress_controls, true %>
 
 <div class="homepage-wrapper">
 
@@ -35,7 +37,7 @@
         <div class="col-xs-12">
           <h2 class="brand-alt-h2">Featured Collection</h2>
           <p>The <%= link_to "Beckman Historical Collection", collection_path('wh246s128') %> covers the life and career of American scientist and philanthropist Dr. Arnold O. Beckman (1900–2004) and the growth of his companies. When Dr. Beckman invented the first commercially successful pH meter in 1934, he became a key player in both the American scientific instrument industry and the 20th-century scientific instrumentation revolution.</p>
-          <%= link_to "BROWSE COLLECTIONS",
+          <%= link_to "Browse Collections",
             collections_path,
             class: "btn btn-primary btn-lg chf-callout-button" %>
         </div>
