--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -25,7 +25,8 @@
       <%= render '/logo' %>
     </div>
 
-    <div class="collapse navbar-collapse pull-right" id="top-navbar-collapse" role="navigation">
+    <div class="scihist-navbar-right collapse pull-right" id="top-navbar-collapse" role="navigation">
+      <h1 class="masthead-application-name">Digital Collections</h1>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t(:'sufia.controls.about'), sufia.about_path, :'data-no-turbolink'=>"true" %></li>
         <li><%= link_to "FAQ", main_app.faq_path %></li>
