--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -1,10 +1,9 @@
 <%# overrides https://github.com/projecthydra/sufia/blob/v7.3.0/app/views/_logo.html.erb %>
 <a id="logo" class="navbar-brand" href="<%= sufia.root_path %>" data-no-turbolink="true">
   <% unless CHF::Env.staging? %>
-    <%= image_tag "chf_logo_white.svg", class: "visible-xs", alt: "Chemical Heritage Foundation logo", id: "masthead-logo-image" %>
-    <%= image_tag "chf_logo_name_white.svg", class: "hidden-xs", alt: "Chemical Heritage Foundation logo", id: "masthead-logo-image" %>
+    <%# image_tag "chf_logo_white.svg", class: "visible-xs", alt: "Chemical Heritage Foundation logo", id: "masthead-logo-image" %>
+    <%= image_tag "scihist_logo_white_on_transparent.png", class: "hidden-xs", alt: "Science History Institute", id: "masthead-logo-image" %>
   <% else %>
     NON-PRODUCTION DEMO
   <% end %>
-  <div id="masthead-application-name" class="hidden-xs">Digital Collections <span class="label label-primary beta">BETA</span></div>
 </a>
