--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,18 +1,25 @@
 <footer id="footer" role="contentinfo">
-  <div class="footerrow footerlogo">
-    <%= link_to "https://www.chemheritage.org", title: "Chemical Heritage Foundation Main Site" do %>
-      <%= image_tag "chf_logo_above_name_white.svg", alt: "Chemical Heritage Foundation logo" %>
+
+  <div class="footerrow">
+    <%= link_to "http://sciencehistory.org" do %>
+      <%= image_tag "scihist_logo_white_on_transparent.png", alt: "Science History Institute" %>
     <% end %>
   </div>
 
   <div class="footerrow">
     <div class="footeraddresses">
       <div class="firstaddress">
-        <strong>Library • Museum • Center for Scholars</strong><br>315 Chestnut Street<br>Philadelphia, PA 19106<br>215.925.2222
+        <strong>Headquarters</strong><br>315 Chestnut Street<br>Philadelphia, PA 19106<br>215.925.2222
       </div>
       <div class="secondaddress">
-        <strong>CHF West</strong><br>2120 University Avenue<br>Berkeley, CA 94704<br>415.798.2104
+        <strong>West Coast Office</strong><br>2120 University Avenue<br>Berkeley, CA 94704<br>415.798.2104
       </div>
+      <div class="thirdaddress">
+      <strong>European Office</strong><br>
+      Maison de la Chimie<br>
+      28, Rue Saint-Dominique<br>
+      F-75007 Paris<br>
+      France
     </div>
   </div>
 
