--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -1,8 +1,8 @@
 <%# overrides https://github.com/projecthydra/sufia/blob/v7.3.0/app/views/_logo.html.erb %>
 <a id="logo" class="navbar-brand" href="<%= sufia.root_path %>" data-no-turbolink="true">
-  <% unless false && CHF::Env.staging? %> <%# temporarily force logo on staging %>
-    <%# image_tag "chf_logo_white.svg", class: "visible-xs", alt: "Chemical Heritage Foundation logo", id: "masthead-logo-image" %>
-    <%= image_tag "scihist_logo_white_on_transparent.png", class: "hidden-xs", alt: "Science History Institute", id: "masthead-logo-image" %>
+  <% unless false && CHF::Env.staging? %> <%# temporarily show logo even on staging %>
+    <%= image_tag "Science_History_Symbol_white_rgb_trimmed_40.png", class: "small-masthead-only masthead-logo-small", alt: "Science History Institute" %>
+    <%= image_tag "scihist_logo_white_on_transparent.png", class: "large-masthead-only masthead-logo-large", alt: "Science History Institute" %>
   <% else %>
     NON-PRODUCTION DEMO
   <% end %>
