--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -23,15 +23,19 @@
         <span class="icon-bar"></span>
       </button>
       <%= render '/logo' %>
+      <h1 class="masthead-title small-masthead-only">Digital Collections</h1>
     </div>
 
-    <div class="scihist-navbar-right collapse pull-right" id="top-navbar-collapse" role="navigation">
-      <h1 class="masthead-application-name">Digital Collections</h1>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t(:'sufia.controls.about'), sufia.about_path, :'data-no-turbolink'=>"true" %></li>
-        <li><%= link_to "FAQ", main_app.faq_path %></li>
-        <li><%= link_to t(:'sufia.controls.contact'), sufia.contact_path %></li>
-      </ul><!-- /.nav -->
+    <div class="collapse navbar-collapse pull-right" id="top-navbar-collapse" role="navigation">
+      <div class="masthead-right">
+        <h1 class="masthead-title large-masthead-only">Digital Collections</h1>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to t(:'sufia.controls.about'), sufia.about_path, :'data-no-turbolink'=>"true" %></li>
+          <li><%= link_to "FAQ", main_app.faq_path %></li>
+          <li><%= link_to t(:'sufia.controls.contact'), sufia.contact_path %></li>
+        </ul><!-- /.nav -->
+      </div>
     </div>
   </div>
 </nav>
