rebrand viewer header logo

--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -15,7 +15,7 @@
           <div class="viewer-header">
 
             <%= link_to main_app.root_path do %>
-              <%= image_tag "chf_logo_white.svg", class: "chf-logo" %>
+              <%= image_tag "Science_History_Symbol_white_rgb_trimmed_40.png", class: "chf-logo" %>
             <% end %>
 
             <h1>
