--- a/app/views/layouts/chf.html.erb
+++ b/app/views/layouts/chf.html.erb
@@ -26,7 +26,7 @@
     <%= content_for(:head) %>
   </head>
 
-  <body class="localized-layout">
+  <body class="localized-layout branded-body-font">
     <a href="#skip_to_content" class="sr-only">Skip to Content</a>
     <%= render partial: '/masthead' %>
     <%= content_for(:navbar) %>
