--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,3 +1,5 @@
-<h1>Contact Us</h1>
+<div class="branded-body-font">
+  <h1>Contact Us</h1>
 
-<p>If you have a request or a question, first check our <%= link_to "Frequently Asked Questions", faq_path %> page. If your question is not answered there or you want to report a problem, contact us via e-mail at <a href="mailto:digital@chemheritage.org">digital@chemheritage.org</a>. A staff member will reply to you shortly.
+  <p>If you have a request or a question, first check our <%= link_to "Frequently Asked Questions", faq_path %> page. If your question is not answered there or you want to report a problem, contact us via e-mail at <a href="mailto:digital@chemheritage.org">digital@chemheritage.org</a>. A staff member will reply to you shortly.</p>
+</div>
