--- a/app/views/static/policy.html.erb
+++ b/app/views/static/policy.html.erb
@@ -1,4 +1,4 @@
-<div class="policy-page">
+<div class="policy-page branded-body-font">
   <h1>Digital Collections Policy</h1>
 
   <h2>Mission</h2>
@@ -61,7 +61,7 @@
 
   <h2>Excluded Items</h2>
   <p>Excluded items may be revisited later for inclusion if capacity increases and priorities shift, but the following materials currently fall outside the scope of CHF’s Digital Collections:</p>
-  <ul>
+  <ul class="text-font">
     <li>Institutional records or educational materials created by CHF that are not part of the library, archives, museum, or oral-history collections (documentary videos, magazine materials, etc.)</li>
     <li>Websites created by CHF or others</li>
     <li>Datasets created by CHF, researchers, or others</li>
