--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title, application_name %>
-<% content_for :container_class, "container-fluid homepage-content-wrapper" %>
+<% content_for :container_class, "container-fluid homepage-content-wrapper branded-body-font" %>
 <% provide :foo, "bar" %>
 <% provide :suppress_controls, true %>
 
