--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,19 +1,21 @@
-<h1 class="brand-alt-h1">About</h1>
+<div class="branded-body-font">
+  <h1 class="brand-alt-h1">About</h1>
 
 
-<p>The Chemical Heritage Foundation’s Digital Collections offer highlights from our library, archives, and museum collections. Our chronology ranges from the Roman Empire to the 21st century, and the materials include everything from fine art to rare books and from scientific objects to photographs.</p>
+  <p>The Chemical Heritage Foundation’s Digital Collections offer highlights from our library, archives, and museum collections. Our chronology ranges from the Roman Empire to the 21st century, and the materials include everything from fine art to rare books and from scientific objects to photographs.</p>
 
-<p>The purpose of CHF’s Digital Collections is to manage, preserve, and provide access to our digital assets all in one location. Although the Digital Collections include only a small portion of our entire collection, new material is added every day. See our <a href="https://www.chemheritage.org/collections">Collections page</a> for more information about our library, archives, and museum.</p>
+  <p>The purpose of CHF’s Digital Collections is to manage, preserve, and provide access to our digital assets all in one location. Although the Digital Collections include only a small portion of our entire collection, new material is added every day. See our <a href="https://www.chemheritage.org/collections">Collections page</a> for more information about our library, archives, and museum.</p>
 
-<h2 class="brand-alt-h2">Copyright</h2>
-<p>Possession of a digital reproduction of CHF’s collection materials does not constitute permission to publish, exhibit, or distribute. In most instances CHF does not hold the copyright to its materials and cannot grant or deny permission to use them.</p>
+  <h2 class="brand-alt-h2">Copyright</h2>
+  <p>Possession of a digital reproduction of CHF’s collection materials does not constitute permission to publish, exhibit, or distribute. In most instances CHF does not hold the copyright to its materials and cannot grant or deny permission to use them.</p>
 
-<p>CHF staff makes every effort to inform patrons of copyrights and other restrictions that may apply to the works by providing a link to RightsStatements.org or Creative Commons in the Rights field in the object’s metadata record. Items we believe to be free of copyright and in the public domain are clearly identified. However, patrons are solely responsible for determining the copyright status of any materials they wish to use, investigating the owner of the copyright, and obtaining permission for the intended use.</p>
+  <p>CHF staff makes every effort to inform patrons of copyrights and other restrictions that may apply to the works by providing a link to RightsStatements.org or Creative Commons in the Rights field in the object’s metadata record. Items we believe to be free of copyright and in the public domain are clearly identified. However, patrons are solely responsible for determining the copyright status of any materials they wish to use, investigating the owner of the copyright, and obtaining permission for the intended use.</p>
 
-<p>The U.S. Copyright Law contains an exception for the so-called fair use of copyrighted materials for the purposes of teaching, scholarship, research, criticism, commentary, and news reporting. Patrons are solely responsible for determining whether their intended use of a copyrighted work is fair and for responding to any claims of copyright infringement that may arise from use of the material. For more information on copyright and fair use, please refer to the <a href="https://www.copyright.gov/" target="_blank">U.S. Copyright Office website</a>.</p>
+  <p>The U.S. Copyright Law contains an exception for the so-called fair use of copyrighted materials for the purposes of teaching, scholarship, research, criticism, commentary, and news reporting. Patrons are solely responsible for determining whether their intended use of a copyrighted work is fair and for responding to any claims of copyright infringement that may arise from use of the material. For more information on copyright and fair use, please refer to the <a href="https://www.copyright.gov/" target="_blank">U.S. Copyright Office website</a>.</p>
 
-<h2 class="brand-alt-h2">Technical Summary</h2>
-<p>The Digital Collections are built on the open-source technology stack <a href="https://samvera.org/" target="_blank">Samvera</a> (formerly Project Hydra), composed of Ruby on Rails, Solr, Blacklight, and Fedora 4. All of <a href="https://github.com/chemheritage/chf-sufia" target="_blank">our code is freely available</a> on GitHub via an Apache 2.0 license.</p>
+  <h2 class="brand-alt-h2">Technical Summary</h2>
+  <p>The Digital Collections are built on the open-source technology stack <a href="https://samvera.org/" target="_blank">Samvera</a> (formerly Project Hydra), composed of Ruby on Rails, Solr, Blacklight, and Fedora 4. All of <a href="https://github.com/chemheritage/chf-sufia" target="_blank">our code is freely available</a> on GitHub via an Apache 2.0 license.</p>
 
-<h2 class="brand-alt-h2">Acknowledgments</h2>
-We would like to acknowledge the generous support of the Arnold and Mabel Beckman Foundation and Robert W. Gore. This project was made possible in part by the Institute of Museum and Library Services grant SP-02-16-0014-16.
+  <h2 class="brand-alt-h2">Acknowledgments</h2>
+  <p>We would like to acknowledge the generous support of the Arnold and Mabel Beckman Foundation and Robert W. Gore. This project was made possible in part by the Institute of Museum and Library Services grant SP-02-16-0014-16.</p>
+</div>
