--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -2,14 +2,14 @@
   <h1 class="brand-alt-h1">About</h1>
 
 
-  <p>The Chemical Heritage Foundation’s Digital Collections offer highlights from our library, archives, and museum collections. Our chronology ranges from the Roman Empire to the 21st century, and the materials include everything from fine art to rare books and from scientific objects to photographs.</p>
+  <p>The Science History Instistute’s Digital Collections offer highlights from our library, archives, and museum collections. Our chronology ranges from the Roman Empire to the 21st century, and the materials include everything from fine art to rare books and from scientific objects to photographs.</p>
 
-  <p>The purpose of CHF’s Digital Collections is to manage, preserve, and provide access to our digital assets all in one location. Although the Digital Collections include only a small portion of our entire collection, new material is added every day. See our <a href="https://www.chemheritage.org/collections">Collections page</a> for more information about our library, archives, and museum.</p>
+  <p>The purpose of our Digital Collections is to manage, preserve, and provide access to our digital assets all in one location. Although the Digital Collections include only a small portion of our entire collection, new material is added every day. See the Institute's <a href="https://www.chemheritage.org/collections">Collections page</a> for more information about our library, archives, and museum.</p>
 
   <h2 class="brand-alt-h2">Copyright</h2>
-  <p>Possession of a digital reproduction of CHF’s collection materials does not constitute permission to publish, exhibit, or distribute. In most instances CHF does not hold the copyright to its materials and cannot grant or deny permission to use them.</p>
+  <p>Possession of a digital reproduction of our collection materials does not constitute permission to publish, exhibit, or distribute. In most instances the Institute does not hold the copyright to its materials and cannot grant or deny permission to use them.</p>
 
-  <p>CHF staff makes every effort to inform patrons of copyrights and other restrictions that may apply to the works by providing a link to RightsStatements.org or Creative Commons in the Rights field in the object’s metadata record. Items we believe to be free of copyright and in the public domain are clearly identified. However, patrons are solely responsible for determining the copyright status of any materials they wish to use, investigating the owner of the copyright, and obtaining permission for the intended use.</p>
+  <p>Our staff makes every effort to inform patrons of copyrights and other restrictions that may apply to the works by providing a link to RightsStatements.org or Creative Commons in the Rights field in the object’s metadata record. Items we believe to be free of copyright and in the public domain are clearly identified. However, patrons are solely responsible for determining the copyright status of any materials they wish to use, investigating the owner of the copyright, and obtaining permission for the intended use.</p>
 
   <p>The U.S. Copyright Law contains an exception for the so-called fair use of copyrighted materials for the purposes of teaching, scholarship, research, criticism, commentary, and news reporting. Patrons are solely responsible for determining whether their intended use of a copyrighted work is fair and for responding to any claims of copyright infringement that may arise from use of the material. For more information on copyright and fair use, please refer to the <a href="https://www.copyright.gov/" target="_blank">U.S. Copyright Office website</a>.</p>
 
