change some urls to org home page for rebranding

--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -18,10 +18,10 @@
     <dd>Please use “Courtesy of Science History Institute Collections” in your credit line. When possible, we ask that you also include the title of the image or name of the collection.</dd>
 
     <dt>The item I want isn’t in the Digital Collections. How do I request a new reproduction? How long will it take to process?</dt>
-    <dd>More information about our Digital Reproduction Services can be found <a href="https://www.chemheritage.org/rights-and-reproductions">here</a>.</dd>
+    <dd>More information about our Digital Reproduction Services can be found <a href="https://sciencehistory.org/rights-and-reproductions">here</a>.</dd>
 
     <dt>I want to see other items in your library or museum that were not digitized.</dt>
-    <dd>For more information on how to access the full holdings in our physical collections, see <a href="https://www.chemheritage.org/collections">the Science History Institute’s Collections page</a>. From there you will be able to search our library catalog and the oral-history catalog, and make an appointment to schedule a research visit.</dd>
+    <dd>For more information on how to access the full holdings in our physical collections, see <a href="https://scinecehistory.org/collections">the Science History Institute’s Collections page</a>. From there you will be able to search our library catalog and the oral-history catalog, and make an appointment to schedule a research visit.</dd>
 
     <dt>I believe I own the copyright to an image, but I’m not credited. How do I tell a staff member and/or request that the item be taken down?</dt>
     <dd>The Science History Institute makes its collections available for education and research and makes reasonable efforts to present accurate and reliable information about copyright. If you believe you hold the copyright to an item and/or want to request that an item be taken down, please e-mail us at <a href="mailto:digital@sciencehistory.org">digital@sciencehistory.org</a>, and we will consider your request. Please include the URL or the full title of the image.</dd>
