--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -14,6 +14,10 @@
   @include button-variant($text-color, $bg-lightly-shaded, $navbar-default-border);
 }
 
+h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
+  color: $brand-dark-blue;
+}
+
 
 .chf-container-fluid {
   $sidebar-width: 235px;
