correct links to rebranded domain institute home page

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer id="footer" role="contentinfo">
 
   <div class="footerrow">
-    <%= link_to "http://sciencehistory.org" do %>
+    <%= link_to "https://www.sciencehistory.org" do %>
       <%= image_tag "scihist_logo_white_on_transparent.png", alt: "Science History Institute" %>
     <% end %>
   </div>
