--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -310,9 +310,8 @@
     }
 
     a.remove {
-      @extend .btn-default;
+      @extend .btn-primary;
       width: 48px;
-      background-color: $brand-btn-alt-bg;
     }
 
     .constraints-label {
