--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -1,5 +1,5 @@
 <div class="faq-page branded-body-font">
-  <h1>Frequently Asked Questions</h1>
+  <h1 class="brand-alt-h1">Frequently Asked Questions</h1>
 
   <dl class="info">
     <dt>How do I report a problem?</dt>
