--- a/app/views/static/policy.html.erb
+++ b/app/views/static/policy.html.erb
@@ -1,5 +1,5 @@
 <div class="policy-page branded-body-font">
-  <h1>Digital Collections Policy</h1>
+  <h1 class="brand-alt-h1">Digital Collections Policy</h1>
 
   <h2>Mission</h2>
   <p>The Science History Institute’s Digital Collections strive to collect, manage, preserve, and increase access to the Institute’s born-digital and digitized library, archives, museum, and oral-history collections. The Digital Collections support and encourage researchers, enable collections staff to manage and preserve digital objects, and facilitate public outreach through open access whenever possible.</p>
