that red accent is too garish on facet selected

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -100,7 +100,7 @@
       }
     }
     .facet-values li .selected {
-      color: $brand-highlight-color;
+      color: $brand-dark-blue;
     }
     .facet-values .remove {
       vertical-align: middle;
