--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -96,11 +96,15 @@
       font-weight: normal;
       @extend h3;
       margin-bottom: 0;
-      margin-top: $font-size-base;
+      margin-top: 0;
+    }
+    li {
+      margin-top: $line-height-computed / 2;
     }
   }
 
   .show-date {
+    font-family: $brand-serif;
     ul {
       @extend .list-unstyled;
       margin-bottom: 0;
