clean up scss a bit

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -1,42 +1,54 @@
-/* old, reconsider with new palette? */
-//$brand-highlight-color: #f15c2b; // an orange used on (old) Distillations website, perhaps use as an alterante highlight sitewide
-$special-label-muted-color: #888;
+/*****
+ *
+ *  Brand colors and fonts, and site-wide base constants
+ *
+ * /
 
 
 /* rebrand colors */
-$brand-dark-blue: #050939; // does not actually match brand, fix?
-$brand-link-light-blue: #76c3d4;
+$brand-dark-blue: #050939;
 $brand-bright-green: #a6e5d8;
-$brand-grey-bg-color: #f9f9f9; // does not match brand, no suitable color in brand
 $brand-red: #d8262e;
 $brand-yellow: #dbe341;
 $brand-blue: #76c3d4;
+$brand-light-grey: #bcbcbc; // not actually very light
+$brand-dark-grey: #646469;
 
 $brand-sans-serif: 'adelle-sans';
 $brand-serif: 'abril-text';
 
-// are we using the condensed version by mistake? Why do we need so much spacing
-// for it to look reasonable? Good spacing for 14px and weight 600.
+$bg-lightly-shaded: #f9f9f9; // does not match brand, no suitable color in brand
+$special-label-muted-color: #888; // not from brand, lighter than normal muted, cause it's bolded a bit and such
+//$brand-highlight-color: #f15c2b; // an orange used on (old) Distillations website, perhaps use as an alterante highlight sitewide
+
+// Why do we need so much spacing for it to look reasonable? Good spacing for 14px and weight 600.
 $small-caps-letter-spacing: 0.05em;
 
 $brand-highlight-color: $brand-red;
-$bg-lightly-shaded: $brand-grey-bg-color;
 $brand-btn-alt-bg: $brand-bright-green;
 $brand-alt-header-font: $brand-sans-serif, sans-serif;
 $brand-alt-header-weight: 700;
-// should be lighter than normal muted, cause it's bolded a bit and such
+
+// adelle-sans has a 600 semi-bold available. 700 is standard bold. 500 seems to be the same as 400=normal.
+$semi-bold-weight: 600;
 
 // Maximum line length we judge to be readable at standard base font size.
 // Used to constrain some block text areas on large screens.
 $max-readable-width: 565px;
 $long-max-readable-width:  725px; // unclear how readable it really is, but we do it sometimes anyway
 
-// adelle-sans has a 600 semi-bold available. 700 is standard bold. 500 seems to be the same as 400=normal.
-$semi-bold-weight: 600;
 
 // via experimentation, on search results page larger than this the
 // results column text is way too wide for reading text.
 $chf-fluid-max-width: 1300px;
+
+$transparent-background: rgba(0,0,0,0.25);
+
+/****
+ *
+ * Bootstrap overrides
+ *
+ */
 
 // Bootstrap 3.x overrides
 $font-size-h4: 22px;
@@ -46,25 +58,30 @@ $brand-info: $brand-blue;
 $brand-danger: $brand-red;
 $brand-warning: $brand-yellow;
 $brand-inverse: $brand-dark-blue;
-$brand-primary: $brand-link-light-blue;
+$brand-primary: $brand-blue;
 $link-hover-color: $brand-dark-blue;
 $font-family-sans-serif: $brand-sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 16px;
 $navbar-inverse-link-color: $brand-bright-green;
 
 
-$well-bg: $brand-grey-bg-color;
-$navbar-default-bg: $brand-grey-bg-color;
-$panel-default-heading-bg: $brand-grey-bg-color;
-$panel-footer-bg: $brand-grey-bg-color;
-$breadcrumb-bg: $brand-grey-bg-color;
+$well-bg: $bg-lightly-shaded;
+$navbar-default-bg: $bg-lightly-shaded;
+$panel-default-heading-bg: $bg-lightly-shaded;
+$panel-footer-bg: $bg-lightly-shaded;
+$breadcrumb-bg: $bg-lightly-shaded;
 
 // border radius matching some elements on chemheritage.org, larger than bootstrap default
 $btn-border-radius-base:        9px !default;
 $btn-border-radius-large:       9px !default;
 $btn-border-radius-small:       9px !default;
 
-$transparent-background: rgba(0,0,0,0.25);
+/***
+ *
+ *  Mixins and placeholder classes; move to separate file?
+ *
+ */
+
 
 @mixin all-white-links {
   a,
