--- a/app/assets/stylesheets/local/footer.scss
+++ b/app/assets/stylesheets/local/footer.scss
@@ -28,7 +28,7 @@ body {
   }
 
   .footeraddresses {
-    color: $brand-link-light-blue;
+    color: $brand-blue;
     display: flex;
     flex-wrap: wrap;
     max-width: 800px;
