--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -17,6 +17,7 @@ $brand-dark-grey: #646469;
 $brand-sans-serif: 'adelle-sans';
 $brand-serif: 'abril-text';
 
+$brand-blue-text: #3595AA; // brand blue is too light for text on white, here's a darker version
 $bg-lightly-shaded: #f9f9f9; // does not match brand, no suitable color in brand
 $special-label-muted-color: #888; // not from brand, lighter than normal muted, cause it's bolded a bit and such
 //$brand-highlight-color: #f15c2b; // an orange used on (old) Distillations website, perhaps use as an alterante highlight sitewide
@@ -59,6 +60,7 @@ $brand-danger: $brand-red;
 $brand-warning: $brand-yellow;
 $brand-inverse: $brand-dark-blue;
 $brand-primary: $brand-blue;
+$link-color: $brand-blue-text;
 $link-hover-color: $brand-dark-blue;
 $font-family-sans-serif: $brand-sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-size-base: 16px;
