viewer, try green rebrand color

--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -75,9 +75,9 @@ $chf_image_viewer_thumb_width: 54px; // Needs to match ImageServiceHelper::THUMB
   .viewer-header {
     flex-shrink: 0;
     background-color: $brand-inverse;
-    color: $brand-primary;
+    color: $brand-bright-green;
     a {
-      color: $brand-primary;
+      color: $brand-bright-green;
       &:hover {
         color: white;
       }
