--- a/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
@@ -20,7 +20,7 @@
     </a>
 
     <div id="viewer-download" class="viewer-navbar-btn btn-group dropup viewer-download" role="group">
-      <button id="btnGroupDrop1" type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
+      <button id="btnGroupDrop1" type="button" class="btn btn-lg btn-emphasis dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
         <i class="fa fa-download"></i> <span class="viewer-navbar-label">Download</span>
       </button>
 
@@ -28,21 +28,21 @@
       </ul>
     </div>
 
-    <button class="viewer-navbar-btn btn btn-lg btn-primary viewer-fullscreen viewer-thin-btn" id="viewer-fullscreen" data-trigger="viewer-fullscreen" tabindex="0" title="Fullscreen">
+    <button class="viewer-navbar-btn btn btn-lg btn-emphasis viewer-fullscreen viewer-thin-btn" id="viewer-fullscreen" data-trigger="viewer-fullscreen" tabindex="0" title="Fullscreen">
       <i class="fa fa-arrows-alt"></i>
     </button>
 
-    <a class="viewer-navbar-btn btn btn-lg btn-primary viewer-rotate-right viewer-thin-btn" id="viewer-rotate-right" tabindex="0">
+    <a class="viewer-navbar-btn btn btn-lg btn-emphasis viewer-rotate-right viewer-thin-btn" id="viewer-rotate-right" tabindex="0">
       <i class="fa fa-repeat"></i>
     </a>
 
-    <a class="viewer-navbar-btn btn btn-lg btn-primary viewer-zoom-fit viewer-thin-btn" id="viewer-zoom-fit" tabindex="0">
+    <a class="viewer-navbar-btn btn btn-lg btn-emphasis viewer-zoom-fit viewer-thin-btn" id="viewer-zoom-fit" tabindex="0">
       <i class="fa fa-square-o"></i>
     </a>
-    <a class="viewer-navbar-btn btn btn-lg btn-primary viewer-zoom-in viewer-thin-btn" id="viewer-zoom-in" tabindex="0">
+    <a class="viewer-navbar-btn btn btn-lg btn-emphasis viewer-zoom-in viewer-thin-btn" id="viewer-zoom-in" tabindex="0">
       <i class="fa fa-search-plus"></i>
     </a>
-    <a class="viewer-navbar-btn btn btn-lg btn-primary viewer-zoom-out viewer-thin-btn" id="viewer-zoom-out" tabindex="0">
+    <a class="viewer-navbar-btn btn btn-lg btn-emphasis viewer-zoom-out viewer-thin-btn" id="viewer-zoom-out" tabindex="0">
       <i class="fa fa-search-minus"></i>
     </a>
 
@@ -50,7 +50,7 @@
       <%# this isn't really a dropdown menu, but that bootstrap works best as
           a starting point for a popup info area, it turns out. popover doesn't
           behave how we want. %>
-      <button id="btnViewerKeyboard" type="button" class="viewer-navbar-btn btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
+      <button id="btnViewerKeyboard" type="button" class="viewer-navbar-btn btn btn-lg btn-emphasis dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
         <i class="fa fa-keyboard-o"></i>
       </button>
       <ul class="dropdown-menu" aria-labelledby="btnViewerKeyboard">
