footer now uses green instead of blue address text

--- a/app/assets/stylesheets/local/footer.scss
+++ b/app/assets/stylesheets/local/footer.scss
@@ -28,7 +28,7 @@ body {
   }
 
   .footeraddresses {
-    color: $brand-blue;
+    color: $brand-bright-green;
     display: flex;
     flex-wrap: wrap;
     max-width: 800px;
