--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -195,7 +195,7 @@
       flex-basis: 208px;
       width: 208px; // Should match ImageServiceHelper::THUMB_BASE_WIDTHS[:standard]
       max-width: 33%; // on smaller screens, more space for text
-      margin-right: $line-height-computed;
+      margin-right: 35px;
       flex-shrink: 0;
       text-align: right;
 
